--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "trello",
+  "author": {
+    "name": "Bharat Rana",
+    "email": "28brana@gmail.com"
+  },
   "private": true,
   "version": "0.0.0",
   "type": "module",
